--- a/views/register.html
+++ b/views/register.html
@@ -67,7 +67,7 @@
 <input type="password" name="password" placeholder=" Confirmar contraseña" required>
 <h3>DATOS PERSONALES</h3>
 <input type="text" name="nombreyapellido" placeholder=" Nombre y Apellido" minlength="3" required>
-<input type="date" name="fechadenacimiento" placeholder=" Fecha de nacimiento" min="1920-01-01" max="2021-06-05">
+<input placeholder=" Fecha de nacimiento" type="text" onfocus="(this.type='date')" onfocusout="(this.type='text')" id="fecha">
 <input type="text" name="domicilio" placeholder=" Domicilio">
 <br>
 <label class="foto-us">Foto de usuario</label>
